2005-02-02  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: append_column_numeric(), 
	_connect_auto_store_editable_signal(): Use an intermediate 
	function pointer, because the IRIX MipsPro compiler needs that. 

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/clipboard/ideal/examplewindow.cc: 
	on_clipboard_received_targets(). Use targets = targets_array instead 
	of targets(targets_array). The IRIX MipsPro compiler needs this, 
	maybe because of the ustring-std::string conversion. We should 
	maybe use ustring anyway.

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/comboboxtext.h: Class documentation: Warn about using this 
	with Glade. Bug #165411,

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Check for atk version 1.9 at configure time, 
	because that is what we use, because it follows the same schedule as 
	gtkmm.

2005-02-01  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg, colorselection.ccg: Remove the #ifdefs for AIX, 
	because sigc::bind now works on AIX.

2.5.6:

2005-01-26  Cedric Gustin <cedric.gustin@swing.be>

	* Makefile.am: Added MSVC_Net2003 directory.
	* configure.in: Added MSVC_Net2003 entries. AC_SUBST
	GTKMM_*_VERSION macros (for the MSVC resource files)
	* gtk/gtkmmconfig.h.in: Added dllimport/dllexport rules. Moved
	HAVE_FLOCKFILE and HAVE_FUNLOCKFILE #undef's to GLIBMM_CONFIGURE
	section, as it is not relevant to platforms that do not run
	configure (MSVC for example). 
	* examples/stock/stock.cc, examples/tictactoe/tictactoe.cc: Added
	Gtk namespace to "manage" calls (Gtk::manage) as required by MSVC.
	* demos/gtk-demo/demo-common.cc: Fixed typo in #ifdef/#endif
	structure. Uncommented get_democodedir function.
	* demos/gtk-demo/textwidget.cc: Use default system font on win32.
	* MSVC_Net2003/*: Initial commit, imported from gtkmm-2-4 branch.
	* MSVC_Net2003/gtkmm/Makefile.am, MSVC_Net2003/gdkmm/Makefile.am: