@@ -32,6 +32,7 @@
 #include <gtkmm/main.h>
 
 #include <cmath>
+#include <math.h> //Needed by the IRIX MipsPro compiler, for sin().
 #include <sstream>
 
 #include <vector>
