@@ -1,5 +1,14 @@
 2005-02-02  Murray Cumming  <murrayc@murrayc.com>
 
+	* examples/cellrenderercustom/cellrenderertoggle.cc: AppWindow:
+	Move the inner ModelColumns class outside of the AppWindow class, 
+	because the IRIX MipsPro compiler (wrongly) says that its 
+	destructor it was referenced but not defined.
+	* examples/gdk/radar.cc: Added #include of math.h, needed by 
+	IRIX MipsPro compiler.
+
+2005-02-02  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/treeview.hg: append_column_numeric(), 
 	_connect_auto_store_editable_signal(): Use an intermediate 
 	function pointer, because the IRIX MipsPro compiler needs that. 
